# AWSOpsScripts

./: README.md
delete-control-tower-vpc/: README.md  pyproject.toml
delete-control-tower-vpc/delete_control_tower_vpc/: main.py
