[tool.poetry]
name = "delete-control-tower-vpc"
version = "0.1.0"
description = "Delete Control Tower auto-created VPC and accompany resources (NAT Gateways, VPC Flow Log, Flow Log Destination S3)"
authors = ["Shawn Wang <shawn.wang@nextlink.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.2"

[tool.poetry.scripts]
delete-vpc = "delete_control_tower_vpc.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
